force-app/main/default/objects/PO_Item__c/PO_Item__c.object-meta.xml
<CustomObject>
    <label>PO Item</label>
    <nameField>
        <displayFormat>POI-{0000}</displayFormat>
        <label>PO Items Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>