force-app/main/default/objects/PO_Item__c/fields/Batch_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Serial_Number__c</fullName>
    <label>Batch /Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>