force-app/main/default/objects/PO_Item__c/fields/EXP_Date__c.field-meta.xml
<CustomField>
    <fullName>EXP_Date__c</fullName>
    <label>EXP Date</label>
    <type>Date</type>
</CustomField>