force-app/main/default/objects/PO_Item__c/fields/MFG_date__c.field-meta.xml
<CustomField>
    <fullName>MFG_date__c</fullName>
    <label>MFG date</label>
    <type>Date</type>
</CustomField>