force-app/main/default/objects/PO_Item__c/fields/Received_Qunatity__c.field-meta.xml
<CustomField>
    <fullName>Received_Qunatity__c</fullName>
    <label>Received Qunatity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>