force-app/main/default/objects/PO_Item__c/fields/Tax_value__c.field-meta.xml
<CustomField>
    <fullName>Tax_value__c</fullName>
    <formula>(Ordered_Quantity__c *  Unit_Price__c ) *  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>