force-app/main/default/objects/PO_Item__c/fields/Total_inc_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_inc_Tax__c</fullName>
    <formula>(Ordered_Quantity__c *  Unit_Price__c ) +  Tax_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total inc Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>